--- a/src/components/Links/links.module.css
+++ b/src/components/Links/links.module.css
@@ -1,4 +1,24 @@
 .sign_up {
-  display: flex;
+  border: 1px solid #dbdbdb;
+  margin-top: 10px;
   justify-content: center;
+  align-items: center;
+  display: flex;
+  gap: 5px;
+}
+
+p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.sign_up_link {
+  padding: 23px 0;
+  text-decoration: none;
+  color: #0095f6;
+
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 18px;
 }
