--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -1,19 +1,20 @@
-.button_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.button {
-  font-family: "Roboto", sans-serif;
+.login_button {
+  width: 268px;
+  margin: 0 40px;
+  margin-top: 7px;
+  height: 32px;
+  background-color: #0095f6;
+  border: none;
+  border-radius: 8px;
   font-size: 14px;
   font-weight: 600;
   line-height: 18px;
-  text-align: center;
-  align-items: center;
-  height: 32px;
+  color: #ffffff;
   cursor: pointer;
-  border-radius: 8px;
-  border: none;
+  margin-bottom: 22px;
+  font-family: "Roboto", sans-serif;
+}
+
+.container {
+  text-align: center;
 }
