--- a/src/components/RegisterForm/registerForm.module.css
+++ b/src/components/RegisterForm/registerForm.module.css
@@ -32,3 +32,11 @@
   margin: 0 40px;
   margin-bottom: 20px;
 }
+
+.register_button {
+  color: #ffffff;
+  background-color: #0095f6;
+  width: 268px;
+  margin-top: 7px;
+  margin-bottom: 28px;
+}
