--- a/src/components/LoginForm/loginForm.module.css
+++ b/src/components/LoginForm/loginForm.module.css
@@ -25,6 +25,12 @@
   font-size: 14px;
 }
 
+.button_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .login_button {
   color: #ffffff;
   background-color: #0095f6;
