Added logout button

--- a/src/components/EditProfileForm/EditProfileForm.module.css
+++ b/src/components/EditProfileForm/EditProfileForm.module.css
@@ -65,6 +65,7 @@
   overflow-y: hidden;
   border: 1px solid #dbdfe4;
   word-wrap: break-word;
+  white-space: pre-wrap;
   display: block;
   resize: none;
 }
