--- a/src/ui/Header/header.module.css
+++ b/src/ui/Header/header.module.css
@@ -25,6 +25,7 @@
   text-decoration: none;
   align-items: center;
 }
+
 span {
   font-size: 16px;
   font-weight: 400;
@@ -40,4 +41,20 @@ span {
 
 .profile {
   border-radius: 50%;
+}
+
+.logout_link {
+  margin-top: 15px;
+  display: flex;
+  gap: 20px;
+  color: red;
+  text-decoration: none;
+}
+
+.logout_img {
+  width: 20px;
+  height: 20px;
+}
+.logout_text {
+  font-weight: 600;
 }
