--- a/src/components/EditProfileForm/EditProfileForm.module.css
+++ b/src/components/EditProfileForm/EditProfileForm.module.css
@@ -107,3 +107,13 @@
 .input input:focus {
   outline: none;
 }
+
+.error {
+  color: red;
+  margin-bottom: 10px;
+}
+
+.success {
+  color: green;
+  margin-bottom: 10px;
+}
