--- a/src/components/ProfileImage/profileImage.module.css
+++ b/src/components/ProfileImage/profileImage.module.css
@@ -1,32 +1,24 @@
-.profile_picture_container {
-  display: flex;
+.container {
   position: relative;
+  width: 168px;
+  height: 168px;
 }
 
-.profile_picture_label {
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 120px;
-  height: 120px;
+.border {
+  display: block;
+  width: 168px;
+  height: 168px;
   border-radius: 50%;
-  background-color: #e6e6e6;
-  overflow: hidden;
-  border: 3px solid #fff;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  position: relative;
 }
 
-.profile_picture {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.profile_picture_placeholder {
-  font-size: 50px;
-  color: #fff;
-  font-weight: bold;
+.profile_image {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  overflow: hidden;
 }
