--- a/src/components/ProfileImage/profileImage.module.css
+++ b/src/components/ProfileImage/profileImage.module.css
@@ -2,6 +2,7 @@
   position: relative;
   width: 168px;
   height: 168px;
+  z-index: -1;
 }
 
 .border {
@@ -9,6 +10,7 @@
   width: 168px;
   height: 168px;
   border-radius: 50%;
+  z-index: -1;
 }
 
 .profile_image {
@@ -21,4 +23,5 @@
   border-radius: 50%;
   object-fit: cover;
   overflow: hidden;
+  z-index: -1;
 }
