--- a/src/components/WindowModal/windowModal.module.css
+++ b/src/components/WindowModal/windowModal.module.css
@@ -56,7 +56,7 @@
 .window_modal_content {
   display: flex;
   flex: 1;
-  overflow: hidden; /* Previne ieșirea conținutului din container */
+  overflow: hidden;
 }
 
 .import_photo {
@@ -66,7 +66,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden; /* Asigură că imaginea nu iese din container */
+  overflow: hidden;
 }
 
 .upload_label {
@@ -79,7 +79,16 @@
 }
 
 .upload_placeholder {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.import_icon {
+  width: 153px !important;
+  height: 153px !important;
+  object-fit: contain;
 }
 
 .upload_placeholder img {
@@ -129,7 +138,7 @@
 }
 
 .smile_icon {
-  margin-top: 50px;
+  margin-top: 10px;
   margin-bottom: 12px;
 }
 
@@ -148,9 +157,25 @@
 .content_textarea {
   resize: none;
   width: 100%;
-  margin-top: 50px;
+  margin-top: 20px;
   border: none;
   outline: none;
+  width: 100%;
+  max-width: 600px; /* Limitează lățimea maximă a textarea-ului */
+  height: 150px; /* Înălțimea textarea-ului */
+  padding: 12px 16px; /* Spațiu interior */
+  border-radius: 8px; /* Colțuri rotunjite */
+  border: 1px solid #ccc; /* Bordură gri deschis */
+  background-color: #f9f9f9; /* Culoare de fundal */
+  resize: none; /* Elimină colțul de resize */
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 150px;
+  scrollbar-width: none;
+}
+
+.content_textarea::-webkit-scrollbar {
+  display: none;
 }
 
 .window_modal_share {
