--- a/src/components/WindowModal/windowModal.module.css
+++ b/src/components/WindowModal/windowModal.module.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   backdrop-filter: blur(1px);
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.65);
   z-index: 1;
 }
 
@@ -29,7 +29,7 @@
   height: 42px;
   padding: 0 16px;
   background-color: white;
-  z-index: 2; /* Asigură că header-ul este deasupra */
+  z-index: 2;
 }
 
 .window_modal_title {
