--- a/src/components/InteractionZone/interactionZone.module.css
+++ b/src/components/InteractionZone/interactionZone.module.css
@@ -1,13 +1,35 @@
-/* Zona de interacțiune */
 .interaction_zone {
   display: flex;
-  flex-direction: column; /* Pune conținutul pe verticală */
-  justify-content: flex-start; /* Aliniază totul în partea de sus */
+  flex-direction: column;
+  justify-content: flex-start;
   width: 100%;
 }
 
 .interaction_header {
   display: flex;
-  justify-content: flex-start; /* Folosește flex-start pentru a alinia corect */
+  justify-content: flex-start;
   width: 100%;
+  margin: 12px;
+}
+
+.user_profile {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.additionally_icon {
+  margin-left: auto;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.separator {
+  height: 1px;
+  width: 100%;
+  background-color: #dbdbdb;
+}
+
+.user_bio {
+  margin: 12px;
 }
