--- a/src/components/ModalWindowPost/modalWindowPost.module.css
+++ b/src/components/ModalWindowPost/modalWindowPost.module.css
@@ -1,8 +1,8 @@
 .modal_container {
   position: fixed;
   top: 0;
-  left: 285px;
-  width: 1220px;
+  left: 0;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -13,7 +13,8 @@
 }
 
 .window_modal {
-  width: 1001px;
+  width: 100%;
+  max-width: 1001px;
   height: 564px;
   border-radius: 8px;
   background-color: white;
@@ -21,7 +22,8 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  top: -25px;
+  margin-left: 300px;
+  top: -20px;
 }
 
 .window_modal_content {
@@ -31,8 +33,6 @@
 }
 
 .import_photo {
-  width: 577px; /* Lățimea imaginii */
-  height: 100%;
   background-color: #fafafa;
   display: flex;
   justify-content: center;
@@ -47,9 +47,9 @@
 }
 
 .interaction_zone_container {
-  width: calc(100% - 577px); /* Restul de spațiu pentru zona de interacțiune */
+  width: 50%;
   height: 100%;
   display: flex;
-  justify-content: flex-end; /* Plasează zona de interacțiune pe dreapta */
+  justify-content: flex-end;
   align-items: flex-start;
 }
