--- a/src/components/WindowModal/windowModal.module.css
+++ b/src/components/WindowModal/windowModal.module.css
@@ -1,8 +1,8 @@
 .modal_container {
   position: fixed;
   top: 0;
-  left: 285px;
-  width: 1220px;
+  left: 0;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -20,6 +20,8 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  position: relative;
+  margin-left: 280px;
 }
 
 .window_modal_header {
