--- a/src/ui/Header/header.module.css
+++ b/src/ui/Header/header.module.css
@@ -60,3 +60,22 @@ span {
 .logout_text {
   font-weight: 600;
 }
+
+.profile_image_wrapper {
+  position: relative;
+}
+
+.profile_border {
+  border: 1px solid #dbdbdb;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  overflow: hidden;
+}
+
+.profile {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  object-fit: cover;
+}
