--- a/src/components/UserProfile/userProfile.module.css
+++ b/src/components/UserProfile/userProfile.module.css
@@ -1,7 +1,7 @@
 .content {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 12px;
 }
 
 .profile_image_container {
@@ -14,4 +14,11 @@
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
+}
+
+.username {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 15.25px;
+  color: #262626;
 }
