--- a/src/components/ModalWindowPost/modalWindowPost.module.css
+++ b/src/components/ModalWindowPost/modalWindowPost.module.css
@@ -21,7 +21,6 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  position: relative;
   margin-left: 300px;
   top: -20px;
 }
@@ -44,6 +43,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  position: relative;
 }
 
 .interaction_zone_container {
@@ -52,4 +52,86 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
+}
+
+.upload_button {
+  position: absolute;
+  top: 100px;
+  left: 700px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 14px;
+  z-index: 10;
+}
+
+.edit_modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.edit_content {
+  position: absolute;
+  right: 200px;
+  bottom: 150px;
+}
+
+.content_textarea {
+  resize: none;
+  width: 100%;
+  margin-top: 5px;
+  border: none;
+  outline: none;
+  width: 400px;
+  height: 130px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  resize: none;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: none;
+  border: 1px solid #ccc;
+  background-color: #f7f7f7;
+}
+
+.content_textarea::-webkit-scrollbar {
+  display: none;
+}
+
+.edit_buttons {
+  display: flex;
+  gap: 10px;
+  position: relative;
+  top: 240px;
+  right: 170px;
+}
+
+.save_button,
+.cancel_button {
+  padding: 5px 20px;
+  font-size: 12px;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.save_button {
+  background-color: #007bff;
+  color: white;
+}
+
+.cancel_button {
+  background-color: #ccc;
+  color: black;
+}
+
+.text_content {
+  cursor: pointer;
 }
