--- a/src/components/ProfileHeader/profileHeader.module.css
+++ b/src/components/ProfileHeader/profileHeader.module.css
@@ -1,6 +1,6 @@
-.profile_header {
-    display: flex;
-    gap: 95px;
-    margin-left: 170px;
-    margin-top: 30px;
-  }
+.profile {
+  display: flex;
+  gap: 95px;
+  margin-left: 170px;
+  margin-top: 30px;
+}
